# functimer

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.md  README.md  pyproject.toml  tox.ini
.github/workflows/: codeql.yml  poetry_publish.yml
examples/: example_decorator.py  example_utils.py  example_wrapper.py
functimer/: __init__.py  __main__.py  classes.py  exceptions.py  functimer.py  timer.py  util.py
tests/: __init__.py  conftest.py  test_classes.py  test_cli.py  test_functimer.py  test_timer.py  test_util.py
tests/fixtures/: timed.py  util.py
