[tool.poetry]
name = "functimer"
version = "1.0.2"
description = "A function decorator/wrapper package to time a given function."
authors = ["Edward Emmett <edemms12@gmail.com>"]
repository = "https://github.com/EJEmmett/functimer"
readme = "README.md"
license = "MIT"

keywords = ["timer", "timed", "timing", "function", "decorator"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^21.4b2"
isort = "^5.8.0"
pre-commit = "^2.12.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
